docs & cleanup: don dep ma nguon Swing, toi uu hoa JavaFX, phan cong Use Case va cap nhat tai lieu bien dich tu dong